--- a/common/node_runner/node_runner/package.json
+++ b/common/node_runner/node_runner/package.json
@@ -15,14 +15,13 @@
   "gypfile": false,
   "private": true,
   "dependencies": {
+    "chops-wct-runner": "^0.0.1",
     "dom5": "^1.0.0",
     "escodegen": "^1.11.0",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.6.0",
     "eslint-plugin-html": "^4.0.0",
     "espree": "^3.0.0",
-    "terser": "^3.8.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
     "vulcanize": "^1.16.0",
     "webpack": "^4.16.1",
     "webpack-command": "^0.4.1"
