--- a/dashboard/v2spa_dev.yaml
+++ b/dashboard/v2spa_dev.yaml
@@ -22,6 +22,10 @@ handlers:
   static_files: polymer2/bower_components/\1/\2
   upload: polymer2/bower_components/.*/.*\.(html|js|css)$
 
+- url: /polymer-svg-template.js
+  static_files: ../third_party/polymer-svg-template/polymer-svg-template.js
+  upload: \.\./third_party/polymer-svg-template/polymer-svg-template.js
+
 - url: /idb/idb.js
   static_files: ../third_party/idb/idb.js
   upload: \.\./third_party/idb/idb\.js
